Enhance DJL model prefetch and backend: strict mode, required model checks, custom translators, and config improvements
- Add strict/non-strict mode to DJL prefetch with required model verification for face, pose, and action recognition
- Ensure prefetch verifies model artifacts in cache and tolerates missing models in non-strict mode
- Allow engine override and cache directory configuration for prefetch via system properties or environment variables
- Update application.yml to use models compatible with prefetch and clarify optional model configuration
- Improve DjlModelLoader to leave engine unspecified for flexible runtime selection
- Refine DjlVisionBackend to support custom translators (RetinaFace, YuNet) and skip loading optional models if not configured
- Add RetinaFaceDetectionTranslator for accurate face detection output
- Update Dockerfile and docker-compose.yml to ensure logs and DJL cache directories are created, owned, and persisted
- Fix logback-spring.xml to use SizeAndTimeBasedRollingPolicy and remove deprecated FNATP usage
- Set DJL cache dir system property early in Spring application startup
- Minor: use getFirst() for NDList and List where appropriate, update TODO.md with batch remediation plan